apps/firefly/mariadb/networkpolicies/ingress-firefly-mariadb.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-firefly-mariadb
  namespace: firefly
spec:
  selector: app == 'firefly-mariadb'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: app == 'firefly'
      destination:
        ports:
          - 3306
